--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.7.0",
     "styled-components": "^5.3.6"
